--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.1",
+    "axios": "^1.1.3",
     "chai": "^4.3.6",
     "dotenv": "^16.0.1",
     "ethers": "^5.6.9"
