--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "tsx src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,7 +12,10 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "hardhat": "^2.12.1"
+    "@types/express": "^4.17.14",
+    "hardhat": "^2.12.1",
+    "tsx": "^3.11.0",
+    "typescript": "^4.8.4"
   },
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.1.1",
@@ -20,6 +24,7 @@
     "axios": "^1.1.3",
     "chai": "^4.3.6",
     "dotenv": "^16.0.1",
-    "ethers": "^5.6.9"
+    "ethers": "^5.6.9",
+    "express": "^4.18.2"
   }
 }
